Fix barba footer rendering above main
- By making barba wrap just before main
    This messed up flex center, so to patch it,
    the current container disappears instantly

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -488,7 +488,13 @@ a {
   justify-content: center;
   flex: 1;
 }
-
+.new-slider-container{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
 
 // Hide header menu and footer in small screens
 
@@ -547,4 +553,4 @@ a {
 //
 //.color-wipe:nth-child(5) {
 //  background-color: rgb(5, 5, 6);
-}
+//}
